Mon Aug 23 20:13:06 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/LocalObject.h:
        * java/idl2jni/runtime/idl2jni_BaseJavaPeer.h:

          TAO_Local_RefCounted_Object is now removed in the DOC group repo.

Tue Aug 17 19:59:28 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * NEWS:
        * README:

          Updated for next release (2.3).

        * ChangeLog:
        * docs/history/ChangeLog-2.2:

          Moved ChangeLog entries from version 2.2 to their own file.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: